# Astro

./: .gitignore  .pre-commit-config.yaml  AzuriteConfig  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_SUMMARY.md  README.md  SECURITY.md  __azurite_db_table__.json  __init__.py  example.py  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  scratch.py
astro/: .env.example  .importlinter  README.md  cleanup_stuck_runs.py  fix_max_tokens.py  optimized_directives.py  pyproject.toml  remove_max_tokens.py  requirements.txt  start_v2_server.sh  update_directives.py  update_planning_config.py  update_synthesis_config.py
astro/astro/: README.md  pyproject.toml
astro/astro-api/: README.md  pyproject.toml
astro/astro-api/astro_api/: __init__.py  dependencies.py  main.py  schemas.py
astro/astro-mongodb/: README.md  pyproject.toml  requirements.txt
astro/astro-mongodb/astro_mongodb/: __init__.py  core_storage.py  memory.py  orchestration_storage.py
astro/astro-mongodb/tests/: test_core_storage.py  test_memory.py  test_orchestration_storage.py
astro/astro-ui/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
astro/astro-ui/scripts/: interaction-audit.mjs  screenshot-audit 2.mjs
astro/astro/core/: __init__.py  file_processing.py
astro/astro/interfaces/: __init__.py  embedding.py  llm.py  memory.py  orchestration_storage.py  storage.py
astro/astro/launchpad/: __init__.py  context_gatherer.py  controller.py  conversation.py  directive_generator.py  interpreter.py  matching.py  preferences.py  running_agent.py  synthesis.py  tools.py
astro/astro/orchestration/: __init__.py  context.py  validation.py
astro/astro_backend_service/: README.md  __init__.py  llm_utils.py  llm_utils_gemini.py
astro/astro_backend_service/api/: __init__.py  dependencies.py  main.py  schemas.py
astro/astro_backend_service/executor/: __init__.py  context.py  events.py  exceptions.py  runner.py  stream.py
astro/astro_backend_service/foundry/: __init__.py  extractor.py  foundry.py  indexes.py  persistence.py  validation.py
astro/astro_backend_service/launchpad/: __init__.py  generic_constellation.py  matching.py  preferences.py  synthesis.py  tools.py  triggering_agent.py
astro/astro_backend_service/models/: __init__.py  constellation.py  directive.py  edge.py  nodes.py  outputs.py  template_variable.py
astro/astro_backend_service/probes/: __init__.py  decorator.py  due_diligence.py  excel.py  exceptions.py  google_news.py  probe.py  registry.py
astro/benchmark_results/: astro_20260202_135545.txt  astro_20260202_140328.txt  astro_20260202_142234.txt  astro_20260208_235053.txt  astro_20260209_004419.txt  astro_dd_constellation_20260202_230657.txt  astro_dd_constellation_20260202_231036.txt  astro_dd_constellation_20260202_231358.txt  astro_dd_constellation_20260202_231714.txt  astro_dd_constellation_20260202_233535.txt  astro_dd_constellation_20260203_001504.txt  astro_dd_constellation_20260208_142702.txt  astro_dd_constellation_20260208_232636.txt  astro_dd_constellation_20260208_233815.txt  astro_dd_constellation_20260208_235922.txt  astro_dd_constellation_20260209_000740.txt  benchmark_20260202_135545.json  benchmark_20260202_140328.json  benchmark_20260202_142234.json  benchmark_20260202_230657.json  benchmark_20260202_231036.json  benchmark_20260202_231303.json  benchmark_20260202_231358.json  benchmark_20260202_231714.json  benchmark_20260202_233535.json  benchmark_20260203_001504.json  benchmark_20260208_142702.json  benchmark_20260208_232636.json  benchmark_20260208_233815.json  benchmark_20260208_235053.json  benchmark_20260208_235922.json  benchmark_20260209_000740.json  benchmark_20260209_003247.json  benchmark_20260209_004419.json  developer_benchmark_20260203_221818.json  developer_benchmark_20260203_223856.json  diff_20260202_135545.txt  diff_20260202_140328.txt  multi_agent_20260202_142234.txt  naive_multi_agent_dd_20260202_233535.txt  (+11 more)
astro/scripts/: benchmark.py  developer_benchmark.py  seed_db.py
astro/tests/: __init__.py  conftest.py  test_patent_changes.py  test_retrieval.py
astro/tests/api/: conftest.py  test_chat 2.py  test_constellations.py  test_directives 2.py  test_directives.py  test_files 2.py  test_files.py  test_probes.py  test_runs.py  test_stars.py
astro/tests/e2e/: __init__ 2.py
astro/tests/executor/: __init__.py  conftest.py  test_context.py  test_run.py  test_runner.py
astro/tests/foundry/: __init__ 2.py  test_extraction 2.py  test_extraction.py  test_foundry.py  test_validation.py
astro/tests/integration/: test_second_brain_integration.py  test_zero_shot_e2e.py
astro/tests/launchpad/: __init__.py  test_conversation.py  test_matching.py  test_preferences.py  test_synthesis.py  test_triggering_agent.py
astro/tests/models/: test_base_stars.py  test_constellation.py  test_directive.py  test_edge.py  test_nodes 2.py  test_nodes.py  test_outputs.py  test_star_types.py  test_template_variable.py
astro/tests/probes/: __init__ 2.py  test_excel.py  (+5 more)
astro/uploads/: 13468e8c-8365-42ed-a19c-656f5ad1c487.xlsx
(+455 files in other folders)
