[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astro_backend_service"
version = "0.1.0"
description = "AI-powered workflow automation"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "motor",
    "pydantic>=2.0",
    "anthropic",
    "langchain",
    "langgraph",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["astro_backend_service*"]
