[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astro_backend_service"
version = "0.1.0"
description = "AI-powered workflow automation"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "motor",
    "pydantic>=2.0",
    "anthropic",
    "langchain",
    "langgraph",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["astro_backend_service*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    "E501",  # Line too long (handled by black)
    "E402",  # Module level import not at top of file (logger pattern)
    "F821",  # Undefined name (forward references in protocols)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "^astro-api/",
    "^astro-mongodb/",
    "^astro-ui/",
]
