[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro"
version = "2.0.0"
description = "Modular AI infrastructure with optional multi-agent orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Astro Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "langchain-core>=0.2.0",
    "langchain>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
orchestration = [
    "networkx>=3.0",
]
launchpad = [
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
]
all = [
    "astro[orchestration,launchpad]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "import-linter>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["astro*"]
namespaces = false

[tool.setuptools.package-data]
astro = ["py.typed"]
